force-app/main/default/objects/Voo__c/fields/Aeroporto_Chegada__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_Chegada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aeroporto_Chegada</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos (Aeroporto_Chegada)</relationshipLabel>
    <relationshipName>Aeroporto_Chegada</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>