force-app/main/default/objects/Voo__c/fields/Aeroporto_Partida__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_Partida__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aeroporto_Partida</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>