force-app/main/default/objects/Voo__c/fields/Distancia__c.field-meta.xml
<CustomField>
    <fullName>Distancia__c</fullName>
    <label>Distancia</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>